# thorvg

./: .travis.yml  README.md  meson.build  meson_options.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: actions.yml  actions_merged.yml  build_ios.yml  build_win.yml  build_windows.yml  coding_style_check.yml  commit_message.yml  cpp_lint_check.sh  manual.yml  memcheck_asan.sh  memcheck_valgrind.sh
examples/: PictureAvif.cpp  Svg.cpp  meson.build
inc/: thorvg.h
src/examples/: Common.h  GifSaver.cpp  GifSaverAllJsons.cpp  Masking.cpp  Shape.cpp  Svg.cpp  Window.cpp  meson.build
src/lib/: tvgInitializer.cpp  tvgLoader.cpp  tvgPaint.cpp  tvgPaint.h  tvgSaver.cpp
src/lib/sw_engine/: tvgSwCommon.h
src/loaders/: meson.build
src/loaders/external_avif/: meson.build  tvgAvifLoader.cpp  tvgAvifLoader.h
src/loaders/external_png/: meson.build
src/loaders/external_webp/: meson.build  tvgWebpLoader.cpp
src/loaders/svg/: meson.build  tvgSvgBuilder.cpp  tvgSvgBuilder.h  tvgSvgCssStyle.h  tvgSvgLoader.cpp  tvgSvgLoader.h  tvgSvgLoaderCommon.h  tvgSvgModel.h  tvgSvgParser.cpp  tvgSvgParser.h  tvgSvgPath.cpp  tvgSvgSceneBuilder.cpp  tvgSvgUtil.cpp  tvgSvgUtil.h  tvgXmlParser.cpp  tvgXmlParser.h
src/loaders/webp/webp_static/: meson.build
src/loaders/webp/webp_static/dec/: vp8.cpp  webp.cpp
src/loaders/webp/webp_static/dsp/: cost.cpp  cost_sse2.cpp  cpu.cpp  dsp.h
src/loaders/webp/webp_static/enc/: cost.cpp  cost.h
src/loaders/webp/webp_static/utils/: utils.h
src/loaders/webp/webp_static/webp/: decode.h
src/renderer/: tvgCommon.h  tvgLoader.cpp  tvgSaver.cpp
src/wasm/: thorvgwasm.cpp
src/windows/: tvgWindowImpl.h
test/: meson.build  testAccessor.cpp  testPicture.cpp  testSwEngine.cpp
test/images/: test.tvg
(+10 files in other folders)
