source_file = [
   'tvgSvgCssStyle.h',
   'tvgSvgLoader.h',
   'tvgSvgModel.h',
   'tvgSvgParser.h',
   'tvgSvgBuilder.h',
   'tvgSvgPath.h',
   'tvgSvgUtil.h',
   'tvgXmlParser.h',
   'tvgSvgCssStyle.cpp',
   'tvgSvgLoader.cpp',
   'tvgSvgParser.cpp',
   'tvgSvgBuilder.cpp',
   'tvgSvgPath.cpp',
   'tvgSvgUtil.cpp',
   'tvgXmlParser.cpp'
]

subloader_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources : source_file
)]
